# Wonderful-Gambling-Paradise

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  LICENSES.md  README.md
cmake/: function.cmake
development/: CHANGELOG.md
resources/textures/default/: klondike.aseprite
src/core/TVector/: CMakeLists.txt  TVector.h
src/core/fundamental classes/TVector/: TVector.cpp  TVector.h
src/core/fundamental classes/logic/card/: CMakeLists.txt  card.cpp  card.h
src/core/fundamental classes/logic/deck/: CMakeLists.txt  deck.cpp  deck.h
src/core/fundamental classes/render/cardRenderer/: CMakeLists.txt  cardRenderer.cpp  cardRenderer.h
src/core/fundamental classes/render/deckRenderer/: CMakeLists.txt  deckRenderer.cpp  deckRenderer.h
src/core/model/card/: CMakeLists.txt  Card.cpp  Card.hpp
src/core/model/deck/: CMakeLists.txt  Deck.cpp  Deck.hpp
src/core/view/card_renderer/: CMakeLists.txt  CardRenderer.cpp  CardRenderer.hpp
src/core/view/deck_renderer/: CMakeLists.txt  DeckRenderer.cpp  DeckRenderer.hpp
src/games/scoundrel/card_position/: CMakeLists.txt  CardPosition.cpp  CardPosition.hpp  CardPositionPresets.hpp
src/games/scoundrel/field/: CMakeLists.txt
src/games/scoundrel/field_renderer/: CMakeLists.txt
src/games/scoundrel/game/: CMakeLists.txt
src/games/solitaire/card_position/: CMakeLists.txt  CardPosition.cpp  CardPosition.hpp  CardPositionPresets.hpp
src/games/solitaire/klondike/cardField/: CMakeLists.txt  card_field.cpp  card_field.h
src/games/solitaire/klondike/cardFieldRenderer/: CMakeLists.txt  cardFieldRenderer.cpp  cardFieldRenderer.h
src/games/solitaire/klondike/field/: CMakeLists.txt  Field.cpp  Field.hpp
src/games/solitaire/klondike/field_renderer/: CMakeLists.txt  FieldRenderer.cpp  FieldRenderer.hpp
src/games/solitaire/klondike/game/: CMakeLists.txt
src/games/solitaire/klondike/klondike/: CMakeLists.txt  klondike_console.cpp  klondike_console.h
src/games/solitaire/klondike/klondikeField/: CMakeLists.txt  klondikeField.cpp  klondikeField.h
src/games/solitaire/klondike/klondikeFieldRenderer/: CMakeLists.txt  klondikeFieldRenderer.cpp  klondikeFieldRenderer.h
src/games/tricky_dungeon/card_position/: CMakeLists.txt  CardPosition.cpp  CardPosition.hpp  CardPositionPresets.hpp
src/games/tricky_dungeon/field/: CMakeLists.txt  Field.cpp  Field.hpp
src/games/tricky_dungeon/field_renderer/: CMakeLists.txt  FieldRenderer.cpp  FieldRenderer.hpp
src/games/tricky_dungeon/game/: CMakeLists.txt
src/main/: CMakeLists.txt  constants.h  constants.hpp  main.cpp
